name:                jsonl-conduit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unfoldml/jsonl-conduit
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          UnfoldML AB
copyright:           (c) 2022 UnfoldML AB, Marco Zocca
category:            JSON, Web, Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 9.0.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     JSONL.Conduit
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , conduit
                     , jsonl >= 0.2

-- executable jsonl-conduit
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , jsonl-conduit

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aeson
                     , bytestring
                     , conduit
                     , jsonl-conduit
                     , hspec


source-repository head
  type:     git
  location: https://github.com/unfoldml/jsonl-conduit
